--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@picocss/pico": "^2.1.1",
+  "dependencies": {
     "rk-ssg": "^1.1.0"
+  },
+  "devDependencies": {
+    "@picocss/pico": "^2.1.1"
   }
 }
