--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "rk-ssg": "^1.1.0"
-  },
   "devDependencies": {
-    "@picocss/pico": "^2.1.1"
+    "@picocss/pico": "^2.1.1",
+    "rk-ssg": "^1.1.0"
   }
 }
